# rust-schedule

temp-test/: .env  .gitignore  Cargo.toml  Dockerfile  TODO.md  compose.yaml  note.md
temp-test/config/: default.toml
temp-test/db/init/: init.sql
temp-test/migration/: Cargo.toml
temp-test/migration/src/: lib.rs
temp-test/migrations/: 20240320000000_create_initial_tables.sql  20240320000000_create_initial_tables.up.sql  20240320000000_create_users.sql  20240320000001_create_posts.sql
temp-test/src/: config.rs  db.rs  handlers.rs  main.rs  routes.rs
temp-test/src/models/: post.rs  user.rs
