[package]
name = "temp-test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8.20"
# sea-orm = { version = "1.1.10", features = [
#     "sqlx-postgres",
#     "runtime-tokio-native-tls",
#     "macros",
# ] }
# sqlx = { version = "0.8.5", features = [
#     "postgres",
#     "runtime-tokio-native-tls",
# ] }
